<resources>
    <string name="app_name">CalendarApp</string>
    <string name="action_settings">Settings</string>
    <string name="selected_date">Selected Date</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="manage_events">Manage events on this date</string>
    <string name="title_activity_manage_events">ManageEventsActivity</string>
    <string name="action_add">Add</string>
    <string name="add_new_event">Add new event</string>
    <string name="cancel">Cancel</string>
    <string name="select_time_range">Select Time Range</string>
    <string name="start_time">Start Time</string>
    <string name="enter_start_time_here">Enter start time here</string>
    <string name="end_time">End Time</string>
    <string name="enter_end_time_here">Enter end time here</string>
    <string name="name">Name</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="desc">Description</string>
    <string name="enter_desc_here">Enter description here</string>
    <string name="time">Time</string>
    <string name="event_present">Event Present</string>
    <string name="delete">Delete</string>
    <string name="modify_event">Modify Event</string>
    <string name="modify">Modify</string>
    <string name="delete_event">Delete this event</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="action_clear_events">Clear All Events</string>
    <string name="delete_all_event">Delete All Events</string>
    <string name="category">Category</string>
    <string name="enter_category_here">Enter category here</string>
    <string name="share">Share</string>
    <string name="update">Update</string>
    <string name="action_color">Color</string>
    <string name="pick_color">Pick color</string>
    <string name="color_palette">Color Palette</string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="date">Date</string>
    <string name="event_name">Event Name</string>
    <string name="action_agenda_view">Agenda View</string>
    <string name="action_weekly_view">Weekly View</string>
    <string name="action_monthly_view">Weekly/Monthly View</string>
    <string name="action_year_view">Yearly View</string>
    <string name="title_activity_yearly">YearlyActivity</string>
    <string name="event_available_year">No events available in the year</string>
    <string name="manage_events_year">Manage events of this year</string>
    <string name="view_agenda_year">View Agenda of this year</string>
    <string name="title_activity_weekly">WeeklyActivity</string>
    <string name="title_activity_daily">DailyActivity</string>
    <string name="event_available_day">No events available on this day</string>
    <string name="view_agenda_day">View Agenda of this day</string>
    <string name="action_daily_view">Daily View</string>
    <string name="week_1">Week 1</string>
</resources>
