<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_min" />

    <EditText
        android:id="@+id/edit_text_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/enter_start_time_here"
        android:maxLength="5" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_avg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_min" />

    <EditText
        android:id="@+id/edit_text_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/enter_end_time_here"
        android:maxLength="5" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_avg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_min" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/enter_name_here" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_avg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_min" />

    <EditText
        android:id="@+id/edit_text_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/enter_category_here" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_avg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_min" />

    <EditText
        android:id="@+id/edit_text_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/enter_desc_here" />
</LinearLayout>