<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CalendarActivity">
    <item
        android:id="@+id/action_agenda_view"
        android:orderInCategory="100"
        android:title="@string/action_agenda_view"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_daily_view"
        android:orderInCategory="100"
        android:title="@string/action_daily_view"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/action_weekly_view"
        android:orderInCategory="100"
        android:title="@string/action_weekly_view"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_monthly_view"
        android:orderInCategory="100"
        android:title="@string/action_monthly_view"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_year_view"
        android:orderInCategory="100"
        android:title="@string/action_year_view"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_events"
        android:orderInCategory="100"
        android:title="@string/action_clear_events"
        app:showAsAction="never" />
</menu>
